--- a/functions/src/emails/nether-news-raid-updates.html
+++ b/functions/src/emails/nether-news-raid-updates.html
@@ -1,42 +1,206 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Raleway|Roboto|Material+Icons" rel="stylesheet">
-    <title>
-      Nether Games - Raid
-    </title>
-  </head>
-  <body style="font-family: Raleway; display: flex; flex-direction: column; justify-content: flex-start; align-items: center; margin: 0;">
-    <img style="position: absolute; top: 0; right: 0; width: 3vw; height: 3vw; margin: 3vw; z-index: 200;" src="https://marketing-image-production.s3.amazonaws.com/uploads/f9055c5d6a2074a9dadde4718d795908f85c1a0950bf20c8043d91f1ca0ed975ca5660a0223d8aac660221f229425d2cd2777a615dd4cac1ca0ed700fcd1b855.png" />
-    <div style="display: flex; flex-direction: column; align-items: center; margin-top: 36vw; width: 80vw;">
-      <img style="width: 100vw; position: absolute; top: 0;" src="https://marketing-image-production.s3.amazonaws.com/uploads/bfc1e5e2bd8643449e2ba7b1c550239f03c27200ccaf5ddc46006c53d463aa118d8042a7d68f9fae4b39c0960042e12db884f1c79e865e796bc657f472ff807c.png" />
-      <img style="width: 20vw; position: absolute; top: 3vw;" src="https://marketing-image-production.s3.amazonaws.com/uploads/b5e97b0721a1487b475fede6dd5d9713fc639350f3cfd15aedf3bea4b10a5d9cee366511a51b96b0d2c827f48548937165b1510d388bc61be6dc8d2fbd8455ee.png" />
-      <div style="position: absolute; font-family: Bree Serif; font-size: 6vw; color: white; left: 6vw; top: 16vw;">
-        Nether News
-      </div>
-      <div style="position: absolute; font-size: 2vw; color: #1B2A42; left: 6vw; top: 25vw; font-style: italic; font-weight: bold;">
-        Raid Updates
-      </div>
-      <img style="fill: #1b2a42; width: 12vw; height: 12vw; margin-left: 68vw; margin-bottom: -3vw;" src="https://marketing-image-production.s3.amazonaws.com/uploads/682531124ca40b4d78316750e58704e5035783ee00a52f46fa58b3bb82fd90c3c782227f3c91b1aeb000e4f42211dd51568357c226565070d024d02cd079b040.png" />
-      <div style="font-family: Bree Serif; font-size: 4vw; color: #1B2A42; margin-top: 3vw; text-align: left; width: 80vw;">
-        Welcome to Nether Games!
-      </div>
-      <div style="font-size: 3vw; color: #1B2A42; margin-top: 3vw; text-align: center; text-align: left; line-height: 4vw;">
-        Thank you for your interest in Nether Games and our upcoming launches of Raid & Seven Sails.
-        <br><br>
-        If you stay subscribed we will be sending updates on when we launch and if we are doing any special events.
-        <br><br>
-        Nether Games is just my brother, Blake, and I, and we are super excited that you care about what we are doing. We hope to make everyone proud and deliver some really awesome games!
-      </div>
-    </div>
-    <div style="font-family: Bree Serif; font-size: 2vw; color: #15becb; margin-top: 3vw; text-align: left; width: 80vw; margin-bottom: 20vw;">
-      Thank You,</br>
-      Brennen Peters
-    </div>
-  </body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
+	<head>
+		<!--[if gte mso 9]><xml><o:OfficeDocumentSettings><o:AllowPNG/><o:PixelsPerInch>96</o:PixelsPerInch></o:OfficeDocumentSettings></xml><![endif]-->
+		<title>Nether_email</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href="https://fonts.googleapis.com/css?family=Bree+Serif|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet" />
+		<style type="text/css">
+			body a {
+				color: #1b2a42;
+				outline:none;
+				text-decoration:underline;
+			}
+			a:hover{text-decoration:none!important;}
+			.h-u a{text-decoration:none;}
+			.h-u a:hover{text-decoration:underline!important;}
+			a[x-apple-data-detectors]{color:inherit!important; text-decoration:none!important;}
+			a[href^="tel"]:hover{text-decoration:none!important;}
+			.active-i a:hover,
+			.active-t:hover{opacity:0.8;}
+			.active-i a,
+			.active-t{transition:all 0.3s ease;}
+			a img{border:none;}
+			b, strong{font-weight:700;}
+			p{margin:0;}
+			th{padding:0;}
+			.ns span, .ns a{color:inherit!important; text-decoration:none!important; border:none!important;}
+			.l-white a{color:#fff;}
+			table{margin:0 auto;}
+			.wrapper{min-width:320px!important;}
+			@media only screen and (max-width:375px) and (min-width:374px) {
+				.wrapper{min-width:374px!important;}
+			}
+			@media only screen and (max-width:414px) and (min-width:413px) {
+				.wrapper{min-width:413px!important;}
+			}
+			@media only screen and (max-width:375px) and (min-width:374px) {
+				[class="wrapper"]{min-width:0!important;}
+			}
+			@media only screen and (max-width:414px) and (min-width:413px) {
+				[class="wrapper"]{min-width:0!important;}
+			}
+			@media only screen and (max-width:817px) {
+				.w-100p{width:100%!important;}
+				.tflex{display:block!important;width:100%!important;}
+				.t-c{float:none!important;margin:0 auto!important;}
+				.ta-c{text-align:center!important;}
+				.hm{display:none!important;width:0!important;height:0!important;padding:0!important;font-size:0!important;line-height:0!important;}
+				.plr-10{padding-left:10px!important;padding-right:10px!important;}
+				.ptb-20{padding-top:20px!important;padding-bottom:20px!important;}
+				.pt-0{padding-top:0!important;}
+				.pt-15{padding-top:15px!important;}
+				.pb-0{padding-bottom:0!important;}
+				.pb-15{padding-bottom:15px!important;}
+				.pb-20{padding-bottom:20px!important;}
+				.pb-30{padding-bottom:30px!important;}
+				.pb-40{padding-bottom:40px!important;}
+				.fs-36{font-size:36px!important;}
+				.fs-48{font-size:48px!important;}
+				.lh-38{line-height:38px!important;}
+				.lh-50{line-height:50px!important;}
+			}
+		</style>
+		<style type="text/css">
+			@import url('https://fonts.googleapis.com/css?family=Bree+Serif|Raleway:400,400i,500,500i,600,600i,700,700i');
+		</style>
+	</head>
+	<body style="margin:0; padding:0; -webkit-text-size-adjust:100%; -ms-text-size-adjust:100%;">
+		<table class="wrapper" width="100%" style="min-width:320px;" cellspacing="0" cellpadding="0">
+			<tr>
+				<td>
+					<table role="content-container" class="w-100p" width="800" align="center" style="max-width:800px; margin:0 auto;" cellpadding="0" cellspacing="0">
+						<tr>
+							<td role="modules-container" style="background:#fff;">
+								<!-- header -->
+								<table role="module" width="100%" cellpadding="0" cellspacing="0">
+									<tr>
+										<td>
+											<table width="100%" cellpadding="0" cellspacing="0">
+												<tr>
+													<td class="pt-15 plr-10 pb-20" style="background:#15BECB; padding:24px 48px 49px;">
+														<table width="100%" cellpadding="0" cellspacing="0">
+															<tr>
+																<th class="hm" width="50">
+																	<table width="100%" cellpadding="0" cellspacing="0">
+																		<tr>
+																			<td class="ta-c">
+                                        <img src="https://firebasestorage.googleapis.com/v0/b/nthrgames.appspot.com/o/raid-icon.png?alt=media" width="50" style="vertical-align:top;" alt="RaidIcon" />
+																			</td>
+																		</tr>
+																	</table>
+                                </th>
+                                <th class="hm" width="222"></th>
+																<th class="hm" width="155" align="left" style="vertical-align:top;">
+																	<table width="100%" cellpadding="0" cellspacing="0">
+																		<tr>
+																			<td class="ta-c">
+																				<a style="text-decoration:none;" href="https://nthrgames.com">
+																					<img src="https://firebasestorage.googleapis.com/v0/b/nthrgames.appspot.com/o/nether-icon.png?alt=media" width="155" style="font:26px/28px Arial, Helvetica, sans-serif; color:#000; vertical-align:top;" alt="Nether Games" />
+																				</a>
+																			</td>
+																		</tr>
+																	</table>
+																</th>
+																<th class="hm" width="20" height="15"></th>
+																<th class="hm" align="left" style="vertical-align:top;">
+																	<table width="100%" cellpadding="0" cellspacing="0">
+																		<tr>
+																			<td class="pt-0" style="padding:10px 0 0;">
+																				<table class="t-c" align="right" cellpadding="0" cellspacing="0">
+																					<tr>
+																						<td class="active-i">
+																							<a style="text-decoration:none;" href="https://www.instagram.com/nthrgames/">
+																								<img src="https://firebasestorage.googleapis.com/v0/b/nthrgames.appspot.com/o/instagram.png?alt=media" width="33" style="font:14px/16px Arial, Helvetica, sans-serif; color:#fff; vertical-align:top;" alt="Instagram" />
+																							</a>
+																						</td>
+																					</tr>
+																				</table>
+																			</td>
+																		</tr>
+																	</table>
+																</th>
+															</tr>
+														</table>
+													</td>
+												</tr>
+											</table>
+										</td>
+									</tr>
+								</table>
+								<table role="module" width="100%" cellpadding="0" cellspacing="0">
+									<tr>
+										<td>
+											<table width="100%" cellpadding="0" cellspacing="0">
+												<tr>
+													<td style="background-color:#15BECB;">
+                            <table width="100%" cellpadding="0" cellspacing="0">
+                              <tr>
+                                <td class="hm" width="48"></td>
+                                <td class="plr-10" height="100" style="vertical-align:top;">
+                                  <table width="100%" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                      <td class="pb-0" style="padding:0 0 8px; font-size:1px; line-height:1px;">
+                                        <table width="40" align="left" cellpadding="0" cellspacing="0">
+                                          <tr>
+                                            <td height="4" style="font-size:1px; line-height:1px; background:#fff; color:#fff;">.</td>
+                                          </tr>
+                                        </table>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td class="fs-48 lh-50" style="padding:0 0 3px; font-weight:700; font-size:69px; font-family: Raleway; color:#fff;">
+                                        Nether News <br />
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td class="pb-40" style="padding:0 0 80px; font-style:italic; font-weight: 700; font-size:19px; font-family: 'Raleway'; color:#1b2a42; letter-spacing:-0.5px;">
+                                        Raid updates
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </td>
+                                <td class="hm" width="50"></td>
+                              </tr>
+                            </table>
+
+													</td>
+												</tr>
+											</table>
+										</td>
+									</tr>
+								</table>
+								<!-- content -->
+								<table role="module" width="100%" height="100%" cellpadding="0" cellspacing="0" style="background: #F0F3F4;">
+									<tr>
+										<td class="pb-20" style="padding:0 10px 32px;">
+											<table class="w-100p" width="704" align="center" style="max-width:704px; margin:0 auto;" cellpadding="0" cellspacing="0">
+												<tr>
+													<td class="pb-20 fs-36 lh-38" align="left" style="padding:0 0 33px; padding-top: 40px; font-size: 32px; font-weight: 500; font-family: Raleway; color:#1b2a42; letter-spacing:0.8px;">
+														Welcome to Nether Games!
+													</td>
+												</tr>
+												<tr>
+													<td class="pb-30" align="left" style="padding:0 0 46px; font-weight:400; font-size: 19px; font-family: 'Raleway'; color:#1b2a42;">
+														Thank you for your interest in Nether Games and our upcoming launches of Raid & Seven Sails. If you stay subscribed we will be sending updates on when we launch and if we are doing any special events.
+														<br><br>
+                            Nether Games is just my brother, Blake, and I, and we are super excited that you care about what we are doing. We hope to make everyone proud and deliver some really awesome games!
+                            <br><br>
+                            Thank You!
+                            <br>
+                            Brennen & Blake Peters
+													</td>
+												</tr>
+											</table>
+										</td>
+									</tr>
+								</table>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+		</table>
+	</body>
 </html>
