--- a/functions/src/emails/nether-news-seven-sails-updates.html
+++ b/functions/src/emails/nether-news-seven-sails-updates.html
@@ -79,14 +79,14 @@
 										<td>
 											<table width="100%" cellpadding="0" cellspacing="0">
 												<tr>
-													<td class="pt-15 plr-10 pb-20" style="background:#15BECB; padding:24px 48px 49px;">
+													<td class="pt-15 plr-10 pb-20" style="background:#F06E58; padding:24px 48px 49px;">
 														<table width="100%" cellpadding="0" cellspacing="0">
 															<tr>
 																<th class="hm" width="50">
 																	<table width="100%" cellpadding="0" cellspacing="0">
 																		<tr>
 																			<td class="ta-c">
-                                        <img src="https://firebasestorage.googleapis.com/v0/b/nthrgames.appspot.com/o/raid-icon.png?alt=media" width="50" style="vertical-align:top;" alt="RaidIcon" />
+                                        <img src="https://firebasestorage.googleapis.com/v0/b/nthrgames.appspot.com/o/seven-sails-icon.png?alt=media" width="50" style="vertical-align:top;" alt="Seven Sails Icon" />
 																			</td>
 																		</tr>
 																	</table>
@@ -134,7 +134,7 @@
 										<td>
 											<table width="100%" cellpadding="0" cellspacing="0">
 												<tr>
-													<td style="background-color:#15BECB;">
+													<td style="background-color:#F06E58;">
                             <table width="100%" cellpadding="0" cellspacing="0">
                               <tr>
                                 <td class="hm" width="48"></td>
@@ -156,7 +156,7 @@
                                     </tr>
                                     <tr>
                                       <td class="pb-40" style="padding:0 0 80px; font-style:italic; font-weight: 700; font-size:19px; font-family: 'Raleway'; color:#1b2a42; letter-spacing:-0.5px;">
-                                        Raid updates
+                                        Seven Sails updates
                                       </td>
                                     </tr>
                                   </table>
